letsencrypt-wildcard-cert/networkpolicy-letsencrypt-wildcard-cert.yaml
apiVersion: "cilium.io/v1"
kind: CiliumNetworkPolicy
metadata:
  name: allow-cert-manager
  namespace: letsencrypt-wildcard-cert
  labels:
    app.kubernetes.io/part-of: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.io/namespace: cert-manager
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.io/namespace: cert-manager
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
